# gnss-qc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: daily.yml  rust.yml
qc/: README.md
qc/src/report/: mod.rs
src/: analysis.rs  cfg.rs  context.rs  error.rs  lib.rs  nav.rs  plot.rs  product.rs  scope.rs
src/analysis/: mod.rs
src/config/: indexing.rs  mod.rs  orbit.rs  report.rs
src/context/: blob.rs  data.rs  flate2.rs  identifier.rs  indexing.rs  key.rs  mod.rs  rinex.rs  sampling.rs  sp3.rs  time.rs
src/context/data/: indexing.rs  match_by.rs  mod.rs  product.rs  wrapper.rs
src/context/fops/: merge.rs  mod.rs  synthesis.rs
src/context/iterator/: ephemeris.rs  iterator.rs  mod.rs  synchronous.rs
src/context/navigation/: mod.rs  nav_cggtts.rs  nav_ppp.rs  nav_pvt.rs  solutions_iter.rs  time.rs
src/context/navigation/buffer/: ephemeris.rs  mod.rs  signals.rs
src/context/preprocessing/: decimation.rs  masking.rs  mod.rs  split.rs  timeshift.rs
src/html/: css.rs  mod.rs  summary.rs
src/html/orbit_residuals/: incompatible.rs
src/html/rovers/: mod.rs
src/html/rovers/rover/: bias.rs
src/html/rovers/rover/orbital_proj/: brdc.rs
src/html/shared/: sampling.rs
src/html/temporal_residuals/: compatible.rs
src/navigation/: mod.rs  nav_filter.rs  reference_position.rs
src/pipeline/: errors.rs  job.rs  jobs.rs  mod.rs  node.rs  pipeline.rs  ports.rs  scheduler.rs  topology.rs  types.rs
src/pipeline/nodes/: ephemeris.rs  merge.rs  mod.rs  observations.rs  residual.rs
src/pipeline/nodes/filters/: constellation.rs  filename.rs  indexing.rs  mod.rs  product_type.rs  sv.rs
src/pipeline/nodes/sync/: mod.rs
src/pipeline/tasklet/: mod.rs  observations.rs
src/pipeline/topology/: mod.rs  node.rs  topology.rs
src/processing/: analysis.rs  mod.rs  runner.rs
src/processing/runner/: ephemeris_buf.rs  mod.rs  precise_states.rs  signals_buf.rs  temporal_data.rs
src/report/: constellations_sel.rs  css.rs  ctx_summary.rs  javascript.rs  mod.rs  observations.rs  orbit.rs  rtk.rs  run_summary.rs  sampling.rs  selector.rs  sp3.rs  summary.rs  temporal_data.rs
src/report/clock/: mod.rs
src/report/html/: css.rs  javascript.rs  mod.rs  nav.rs  navi.rs  observations.rs  orbit_proj.rs  rtk.rs  summary.rs
src/report/html/summary/: mod.rs  sp3_sum.rs
src/report/nav/: elev_snr.rs  mod.rs  navi_graph.rs
src/report/observations/: bias.rs  mod.rs
src/report/orbit_proj/: compatible.rs  incompatible.rs  mod.rs
src/report/orbit_residuals/: compatible.rs  mod.rs
src/report/orbital/: compatible.rs  incompatible.rs  mixed.rs
src/report/rendering/: mod.rs
src/report/rendering/html/: mod.rs  observations.rs  orbit_proj.rs  plot.rs  rtk.rs
src/report/rendering/html/summary/: mod.rs  rinex_sum.rs  run.rs  sp3_sum.rs
src/report/rendering/pdf/: credits.rs  documentation.rs  font.rs  footer.rs  logo.rs  mod.rs  observations.rs  orbit_proj.rs  rtk_sum.rs  subtitle.rs  title.rs  vertical_separator.rs
src/report/rendering/pdf/summary/: mod.rs  run.rs
src/report/rendering/pdf/table_of_content/: chapter.rs  mod.rs  section.rs
src/report/rendering/plots/: mod.rs
src/report/rinex/: meteo.rs  mod.rs
src/report/rovers/: mod.rs
src/report/rovers/rover/: bias.rs  mod.rs
src/report/rovers/rover/orbital_proj/: mod.rs
src/report/sampling/: gaps.rs  mod.rs
src/report/shared/: sampling.rs
src/report/sp3/: compatible.rs  mod.rs
src/report/summaries/: mod.rs  rinex_sum.rs  sp3_sum.rs
src/report/summary/: bias.rs  mod.rs  nav_post.rs
src/report/temporal_residuals/: incompatible.rs  mod.rs
src/report/time_residuals/: compatible.rs  mod.rs
src/serializer/: ephemeris.rs  iter.rs  mod.rs  serializer.rs  signal.rs  sp3.rs  state.rs  sync.rs
src/serializer/data/: ephemeris.rs  mod.rs  signal.rs  sp3_data.rs
src/tests/: indexing.rs  mod.rs  timeshift.rs
src/tests/reporting/: mod.rs  nav.rs  nav_clk.rs  nav_sp3.rs  ppp_ultra.rs
src/tests/reporting/rovers/: dual.rs  dual_sp3.rs  mod.rs  single.rs  single_sp3.rs
traits/: Cargo.toml  README.md
