[package]
name = "gnss-qc"
version = "0.4.0-alpha"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS data Quality Control"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/gnss-qc"
keywords = ["geo", "gnss", "gps"]
categories = ["science", "science::geo"]
edition = "2021"

[package.metadata]
msrv = "1.82"

[package.metadata.docs.rs]
features = ["sp3", "flate2", "navigation"]
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[features]
# Flate2: Support Gzip compressed files by default
# SP3: format supported by default (for PPP)
# PDF: render report as PDF by default
# Navigation: post-processed navigation
# CGGTTS: post-fit CGGTTS available
default = ["sp3", "flate2", "pdf", "navigation", "cggtts"]

# Support Gzip compressed files natively
flate2 = [
    "rinex/flate2",
    "sp3?/flate2",
]

# Unlock support of high precision SP3 files.
# When targetting highest precision analysis and solutions, like in PPP,
# Otherwise, your processing (and possible navigation) only relies on RINEX.
sp3 = ["dep:sp3"]

# Unlock Post Processed Navigation.
# Without this option, you are limited to context setup & analysis (basic processing).
# This option unlocks most advanced solvers.
navigation = [
    "dep:anise",
    "rinex/nav",
    "sp3?/anise",
    "dep:gnss-rtk",
]

# Unlocks "embedded ephemeris" option. You should always activate
# this feature along "navigation". Most navigation database is downloaded
# at build time, otherwise it will have to be downloaded at deployment time.
# This option removes the need to access the Internet for most applications.
embed_ephem = [
    "dep:anise",
    "anise?/embed_ephem",
    "gnss-rtk?/embed_ephem",
]

# Unlock NAV CGGTTS solution solver
cggtts = [
    "dep:anise",
    "rinex/nav",
    "sp3?/anise",
    "dep:gnss-rtk",
    "dep:cggtts",
]

# PDF report rendering
pdf = [
    "dep:genpdf",
    "dep:plotters",
    "dep:image",
]

# HTML report rendering
html = [
    "dep:maud",
    "dep:plotly",
]

[dependencies.rinex]
version = "0.19"
features = [
    "qc", 
    "processing", 
    "obs", 
    "nav", 
    "ut1", 
    "meteo", 
    "clock", 
    "ionex", 
    "antex", 
    "serde"
]

[dependencies.sp3]
version = "1.2"
optional = true
features = [
    "qc", 
    "processing", 
    "serde"
]

[dependencies.gnss-rtk]
git = "https://github.com/rtk-rs/gnss-rtk"
rev = "1c6b590b1f47ed1d3d3377a888f761aa07b0e7f4"
optional = true
features = [
    "serde",
]

[dependencies.cggtts]
version = "4.3"
optional = true
features = [
    "serde",
    "scheduler",
    "tracker",
]

[dependencies]
log = "0.4"
thiserror = "2"
strum = "0.27"
strum_macros = "0.26"
itertools = "0.14.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
anise = { version = "0.6", optional = true }
hifitime = { version = "4.1", features = ["serde", "std"] }
gnss-rs = { version = "2.4", features = ["serde"] }
gnss-qc-traits = { version = "0.2", features = ["processing"] }
plotters = { version = "0.3", optional = true }
image = { version = "0.23", optional = true }
genpdf = { version = "0.2", optional = true, features = ["images"] }
maud = { version = "0.26", optional = true }
plotly = { version = "0.12", optional = true }

[dev-dependencies]
serde_json = "1"
rstest = "0.25.0"
env_logger = "0.11"
