[package]
name = "gnss-qc"
version = "0.4.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS data Quality Control"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/gnss-qc"
keywords = ["geo", "gnss", "gps"]
categories = ["science", "science::geo"]
edition = "2021"

[package.metadata]
msrv = "1.82"

[package.metadata.docs.rs]
features = ["sp3", "flate2", "navigation"]
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[features]
# Supports SP3 files by default
# Support Gzip compressed files by default
default = ["sp3", "flate2"]

# Support Gzip compressed files natively
flate2 = [
    "rinex/flate2",
    "sp3?/flate2",
]

# Unlock support of high precision SP3 files.
# When targetting highest precision analysis and solutions, like in PPP,
# Otherwise, your processing (and possible navigation) only relies on RINEX.
sp3 = ["dep:sp3"]

# Unlock Post Processed Navigation.
# Without this option, you are limited to context setup & analysis (basic processing).
# This option unlocks most advanced solvers.
navigation = [
    "dep:anise",
    "rinex/nav",
    "sp3?/anise",
    "dep:log",
]

# Unlock "embedded ephemeris" option,
# which removes the need of Internet access on very first (ever) deployment
# in order to obtain the ANISE database
embed_ephem = [
    "dep:anise",
    "anise/embed_ephem",
]

# Unlock graphical analysis (plots rendering), otherwise reports are solely text based
# plot = [
#     "dep:plotly", 
# ]

[dependencies.rinex]
git = "https://github.com/nav-solutions/rinex"
rev = "a10b41abb0ccd6b804dff6acd560992cdcd4c639"
features = [
    "qc", 
    "processing", 
    "obs", 
    "nav", 
    "ut1", 
    "meteo", 
    "clock", 
    "antex", 
    "serde",
]

[dependencies.sp3]
git = "https://github.com/nav-solutions/sp3"
rev = "0ac81cff95466eb6a3f5c7654e278d12ada4aeb8"
optional = true
features = [
    "qc", 
    "processing", 
    "serde"
]

[dependencies]
thiserror = "2"
maud = "0.26"
plotly = "0.12"
strum = "0.27"
strum_macros = "0.26"
itertools = "0.14.0"
log = { version = "0.4", optional = true }
anise = { version = "0.5.3", optional = true }
gnss-rs = { version = "2.5", features = ["serde"] }
hifitime = { version = "4.1", features = ["serde", "std"] }
gnss-qc-traits = { version = "0.4", features = ["processing"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1"
